WebProcessProxy::updateProcessState() is causing duplicate symbol linker errors https://bugs.webkit.org/show_bug.cgi?id=129390

Reviewed by Tim Horton.

Caused by r164737. WebProcessProxy::updateProcessState() is defined in a header, outside of
a class, but isn't inlined.

* UIProcess/WebProcessProxy.h:
(WebKit::WebProcessProxy::updateProcessState):

Canonical link: https://commits.webkit.org/147443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164749 268f45cc-cd09-0410-ab3c-d52691b4dbfc